Fixes dble scrollbar in ncwms panel in chrome

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -676,7 +676,7 @@
 
   .ncwms-root {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   .panel-ncwms-container {
     border: none;
